Wed Sep 15 16:22:17 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>


	* configure.in (ALL_LINGUAS): Add pt_PT.

	* configure.in: Some tweaks for cross compiling under MingW32
	* acconfig.h (USE_STATIC_RNDW32): New.

Tue Sep  7 17:08:10 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>


	* VERSION: Set to 1.0.0.

Mon Sep  6 19:59:08 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>


	* configure.in: Create makefile in doc/gph

	* acinclude.m4 (GNUPG_FUNC_MKDIR_TAKES_ONE_ARG): New
	* configure.in: use the above.

Thu Sep  2 16:40:55 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>


	* VERSION: Set to 0.9.11.

Tue Aug 31 17:20:44 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in: Minor changes to the OS/2 and Mingw32 system labels.
	Add a printable name for Hurd.

Mon Aug 30 20:38:33 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in: Some support for DJGPP (Mark Elbrecht)

Wed Aug  4 10:34:46 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* VERSION: Set to 0.9.10.

Mon Jul 26 09:34:46 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_SYS_SYMBOL_UNDERSCORE): remove init of ac_cv_...

	* Makefile.am (DISCLEANFILES): New

Fri Jul 23 13:53:03 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* VERSION: Set to 0.9.9.

	* configure.in: Print a notice when rndunix is used.

Thu Jul 15 10:15:35 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_SYS_SYMBOL_UNDERSCORE): Fixed last modification.

Wed Jul  7 13:08:40 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* Makefile.am: Support for libtool.
	* configure.in: Ditto.

Tue Jun 29 21:44:25 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (use_local_zlib): The lost dollar is back.

	* acinclude.m4 (GNUPG_SYS_SYMBOL_UNDERSCORE): Add EMX case.
	* configure.in: Another variant of the MX vendor string

	* configure.in (--with-capabilities): Some test code (Remi).

Sat Jun 26 12:15:59 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
