@@ -8,7 +8,13 @@ gcrypt =
 my_clean_gcrypt = gcrypt/Makefile
 endif
 
-SUBDIRS = intl zlib util mpi cipher tools g10 po doc checks ${gcrypt}
+if CROSS_COMPILING
+checks =
+else
+checks = checks
+endif
+
+SUBDIRS = intl zlib util mpi cipher tools g10 po doc ${checks} ${gcrypt}
 EXTRA_DIST = VERSION  PROJECTS BUGS
 # gettext never gets it right, so we take here care of deleting the
 # symlink.  my_clean_gcrypt is just a kludge until we can include
